# mchep

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  custom.css  index.html  install-capi.sh  mkdocs.yml
.github/workflows/: release.yml  run-rust.yml
SIMD_TUTORIAL/: index.html
analysis/: README.md  plot_benchmarks.py
building/: index.html
docs/: SIMD_TUTORIAL.md  building.md  custom.css  index.md  tutorials.md
maintainer/: make-release.sh
mchep/: Cargo.toml
mchep/benches/: full_benchmark.rs  vegas_benchmark.rs
mchep/src/: gpu.rs  grid.rs  integrand.rs  lib.rs  mpi.rs  vegas.rs  vegasplus.rs
mchep/src/benchmark/: integrands.rs  mod.rs
mchep/tests/: mpi_integration_test.rs
mchep_capi/: Cargo.toml  README.md  build.rs  cbindgen.toml
mchep_capi/bench/: BENCHMARK_RESULTS.md  Makefile  README.md  benchmark.sh  benchmark_accuracy.sh  benchmark_heavy_cuba.cpp  benchmark_heavy_qcd.cpp  benchmark_mchep.cpp  benchmark_mchep_accuracy.cpp  benchmark_mchep_simd.cpp  benchmark_mchep_simd_accuracy.cpp  benchmark_mpi_simd_avx.cpp  benchmark_scaling.cpp  benchmark_simd_avx.cpp  cuba_accuracy.cpp  cuba_example.cpp  cuba_parallel_test.cpp  cuba_scaling.cpp  mchep_parallel_test.cpp  measure_threads.sh  test_vegasplus_simd.cpp  vegasplus_expensive_test.cpp
mchep_capi/include/: mchep.hpp
mchep_capi/src/: lib.rs
mchep_capi/src/include/: mchep.hpp
mchep_capi/tests/: Makefile  test_capi.c  test_capi.output  test_cppapi.cpp  test_cppapi.output  test_cppapi_simd.cpp  test_cppapi_simd.output
mchep_pyapi/: Cargo.toml  README.md  pyproject.toml
mchep_pyapi/src/: lib.rs  vegas.rs
mchep_pyapi/tests/: gaussian.py  test_vegas.py
overrides/partials/: header.html
search/: search_index.json
src/: vegas.rs  vegasplus.rs
tests/: mpi_integration_test.rs
tutorials/: index.html
