[workspace]
members = ["mchep", "mchep_pyapi", "mchep_capi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "Highly parallelizable Monte Carlo integration routine with SIMD and GPU acceleration"
license = "GPL-3.0-or-later"
repository = "https://github.com/tanjona/mchep"
categories = ["science", "algorithms"]
keywords = ["monte-carlo", "integration", "physics"]

[workspace.dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.11.0"
itertools = "0.12.1"
thiserror = "1.0.69"
num-traits = "0.2.19"
cust = "0.3.2"
mpi = "0.7"
pyo3 = "0.27"
rust-version = "1.82.0"
wide = "0.7.33"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing-docs = "warn"
unsafe-op-in-unsafe-fn = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
