[package]
name = "mchep"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }
rand_pcg = { workspace = true }
rayon = { workspace = true }
mpi = { workspace = true, optional = true }
cust = { workspace = true, optional = true }

[features]
mpi = ["dep:mpi"]
gpu = ["dep:cust"]
