[package]
name = "mchep"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
wide = { workspace = true }

[features]
gpu = ["dep:cust"]
mpi = ["dep:mpi"]

[dependencies.cust]
workspace = true
optional = true

[dependencies.mpi]
workspace = true
optional = true
features = ["user-operations"]

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.5"

[[bench]]
name = "vegas_benchmark"
harness = false
