[package]
name = "mchep"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
wide = { workspace = true }
bytemuck = { version = "1.12", features = ["derive"] }
libm = "0.2"

[features]
benchmarking = ["gpu"]
gpu = ["dep:burn"]
mpi = ["dep:mpi"]

[dependencies.burn]
version = "0.19.1"
features = ["wgpu"]
optional = true

[dependencies.mpi]
workspace = true
optional = true
features = ["user-operations"]

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.5"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "vegas_benchmark"
harness = false

[[bench]]
name = "full_benchmark"
harness = false
required-features = ["benchmarking"]
