[package]
name = "mchep_capi"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "C language interface to NeoPDF"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
mchep = { path = "../mchep" }
wide = { workspace = true }

[build-dependencies]
cbindgen = "0.26.0"

[features]
capi = []
