[package]
name = "mchep_capi"
authors.workspace = true
description = "C language interface to MCHEP"
readme = "README.md"
build = "build.rs"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
mchep = { path = "../mchep", version = "0.1.0" }
wide = { workspace = true }
mpi = { workspace = true, optional = true }

[build-dependencies]
cbindgen = "0.26.0"

[features]
capi = []
mpi = ["dep:mpi", "mchep/mpi"]

[lints]
workspace = true
