[package]
name = "mchep_pyapi"
authors = ["Tanjona R. Rabemananjara <tanjona.hepc@gmail.com>"]
description = "Python bindings to MCHEP Rust library"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "mchep"
crate-type = ["cdylib"]

[dependencies]
mchep = { path = "../mchep" }
pyo3 = { workspace = true, features = ["extension-module"] }
