[package]
name = "mchep_pyapi"
authors.workspace = true
description.workspace = true
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "mchep"
crate-type = ["cdylib"]
doc = false

[dependencies]
mchep = { path = "../mchep", version = "0.1.1" }
mpi = { workspace = true, optional = true }
pyo3 = { workspace = true, features = ["extension-module"] }
wide = { workspace = true }

[features]
mpi = ["mchep/mpi", "dep:mpi"]
